Fix #99 Export API.